fixes menu on iOs for the other pages

--- a/creditos/style.css
+++ b/creditos/style.css
@@ -123,6 +123,7 @@ a {
 .top-bar img {
     display: block;
     height: 100%;
+    max-width: 100%;
 }
 
 .top-bar .btn-menu {
