--- a/metodologia/style.css
+++ b/metodologia/style.css
@@ -117,6 +117,7 @@ a {
 .top-bar img {
     display: block;
     height: 100%;
+    max-width: 100%;
 }
 
 .top-bar .btn-menu {
