--- a/paisaje/style.css
+++ b/paisaje/style.css
@@ -296,6 +296,7 @@ h1, h2, h3, h4 {
 .top-bar img {
     display: block;
     height: 100%;
+    max-width: 100%;
 }
 
 .top-bar .btn-menu {
